# Story

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEBUG.md  DOCUMENTATION.md  README.md  demo.py  pyproject.toml
.github/: ci.yml.backup
.github/workflows/: ci-cd.yml
dashboard/: next.config.js  package.json  tailwind.config.js
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/components/: EntityGraph.tsx  ReportViewer.tsx  ThreatMetrics.tsx  WalletSearch.tsx
deployment/: Dockerfile  docker-compose.yml
plans/: implementation_plan.md
project_vajra/: __init__.py  config.py  core.py  data_adapters.py  logging_config.py  requirements.txt  vajra_api.py  vajra_tasks.py
project_vajra/adapters/chain/: __init__.py  ethereum.py  polygon.py
project_vajra/adapters/forensics/: axiom_parser.py  cellebrite_parser.py  ftk_parser.py
project_vajra/analytics/: __init__.py  graph.py  temporal.py
project_vajra/countermeasures/: __init__.py  deployer.py  honeycontract.py  monitor.py
project_vajra/intelligence/: __init__.py  claude_client.py  threat_intel.py
project_vajra/orchestration/: __init__.py  openclaw.py  playbook_generator.py
project_vajra/tasks/: async_tasks.py
sample_data/: __init__.py  cases.py
technical_appendix/: antigravity_module.md  claude_threat_model.md  openclaw_orchestrator.md  vajra_architecture.md
tests/: benchmark.py  conftest.py  test_analytics.py  test_countermeasures.py  test_data_adapters.py  test_intelligence.py  test_orchestration.py  test_vajra.py
